--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,9 @@
 # 镜像源配置参数（可通过 build args 覆盖）
 ARG DOCKER_REGISTRY=
-ARG GHCR_REGISTRY=ghcr.io/
 ARG APT_MIRROR=
 ARG PYPI_INDEX_URL=
 
-# 安装 uv（使用中间阶段避免 COPY --from 的变量展开问题）
-FROM ${GHCR_REGISTRY}astral-sh/uv:latest AS uv
-
 # 使用 Python 3.10 作为基础镜像
-# 如果指定了 DOCKER_REGISTRY，使用镜像源；否则使用官方源
 FROM ${DOCKER_REGISTRY:-}python:3.10-slim
 
 # 设置工作目录
@@ -26,9 +21,13 @@ RUN if [ -n "$APT_MIRROR" ]; then \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# 从 uv 阶段复制二进制文件
-COPY --from=uv /uv /usr/local/bin/uv
-RUN chmod +x /usr/local/bin/uv
+# 使用 pip 安装 uv（避免从 ghcr.io 拉取镜像的网络问题）
+ARG PYPI_INDEX_URL
+RUN if [ -n "$PYPI_INDEX_URL" ]; then \
+        pip install --index-url "$PYPI_INDEX_URL" uv; \
+    else \
+        pip install uv; \
+    fi
 
 # 复制项目配置文件
 COPY pyproject.toml ./
