--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "tenacity>=9.0.0",
     "alembic>=1.13.0",
     "flask-migrate>=4.0.0",
+    "pymysql>=1.1.0",
 ]
 
 [project.optional-dependencies]
