--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,17 @@ OPENAI_MAX_RETRIES=2
 TEXT_MODEL=gemini-3-flash-preview
 IMAGE_MODEL=gemini-3-pro-image-preview
 
+# ========== 数据库配置（必填）==========
+# MySQL 数据库连接信息
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=your-mysql-username
+MYSQL_PASSWORD=your-mysql-password
+MYSQL_DATABASE=banana_slides
+
+# 或者使用完整的 DATABASE_URL（优先级高于上面的分离配置）
+# DATABASE_URL=mysql+pymysql://user:password@host:3306/database?charset=utf8mb4
+
 # Flask 配置
 LOG_LEVEL=INFO
 FLASK_ENV=production
