--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,19 @@
 services:
+  redis:
+    image: redis:7-alpine
+    container_name: banana-slides-redis
+    command: ["redis-server", "--appendonly", "yes"]
+    volumes:
+      - redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+    restart: unless-stopped
+    networks:
+      - banana-slides-network
+
   backend:
     build:
       context: .
@@ -11,10 +26,16 @@ services:
     ports:
       # 宿主机端口:容器内部端口（由 PORT 控制，默认 5000）
       # 外部访问始终是 http://localhost:5000，内部监听端口可通过 PORT 调整
-      - "5000:${PORT:-5000}"
+      - "${PORT:-5000}:5000"
     # 从 .env 文件自动加载所有环境变量
     env_file:
       - .env
+    environment:
+      # Enable Redis/RQ queue in docker-compose dev setup
+      TASK_QUEUE_BACKEND: redis
+      REDIS_URL: redis://redis:6379/0
+      RQ_QUEUE_FAST: fast
+      RQ_QUEUE_HEAVY: heavy
     # Vertex AI 配置（使用 Vertex AI 时取消以下注释）
     # environment:
     #   - GOOGLE_APPLICATION_CREDENTIALS=/app/gcp-service-account.json
@@ -30,11 +51,70 @@ services:
     restart: unless-stopped
     healthcheck:
       # 健康检查同样跟随 PORT（默认 5000）
-      test: ["CMD", "curl", "-f", "http://localhost:${PORT:-5000}/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 10s
+    depends_on:
+      redis:
+        condition: service_healthy
+    networks:
+      - banana-slides-network
+
+  worker-fast:
+    build:
+      context: .
+      dockerfile: backend/Dockerfile
+      args:
+        DOCKER_REGISTRY: ${DOCKER_REGISTRY:-}
+        APT_MIRROR: ${APT_MIRROR:-}
+        PYPI_INDEX_URL: ${PYPI_INDEX_URL:-}
+    env_file:
+      - .env
+    environment:
+      RUN_MODE: worker
+      TASK_QUEUE_BACKEND: redis
+      REDIS_URL: redis://redis:6379/0
+      RQ_QUEUES: fast
+    volumes:
+      - ./uploads:/app/uploads
+    depends_on:
+      redis:
+        condition: service_healthy
+      backend:
+        condition: service_healthy
+    healthcheck:
+      disable: true
+    restart: unless-stopped
+    networks:
+      - banana-slides-network
+
+  worker-heavy:
+    build:
+      context: .
+      dockerfile: backend/Dockerfile
+      args:
+        DOCKER_REGISTRY: ${DOCKER_REGISTRY:-}
+        APT_MIRROR: ${APT_MIRROR:-}
+        PYPI_INDEX_URL: ${PYPI_INDEX_URL:-}
+    env_file:
+      - .env
+    environment:
+      RUN_MODE: worker
+      TASK_QUEUE_BACKEND: redis
+      REDIS_URL: redis://redis:6379/0
+      RQ_QUEUES: heavy
+    volumes:
+      - ./uploads:/app/uploads
+    depends_on:
+      redis:
+        condition: service_healthy
+      backend:
+        condition: service_healthy
+    healthcheck:
+      disable: true
+    restart: unless-stopped
     networks:
       - banana-slides-network
 
@@ -64,3 +144,4 @@ networks:
 volumes:
   backend-data:
   uploads-data:
+  redis-data:
