--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "flask>=3.0.0",
     "flask-cors>=4.0.0",
     "flask-sqlalchemy>=3.1.1",
+    "gunicorn>=21.2.0",
     "google-genai>=1.52.0",
     "openai>=1.0.0",
     "pydantic>=2.9.0",
@@ -17,6 +18,8 @@ dependencies = [
     "reportlab>=4.1.0",
     "werkzeug>=3.0.1",
     "markitdown[all]",
+    "redis>=5.0.0",
+    "rq>=1.16.0",
     "tenacity>=9.0.0",
     "alembic>=1.13.0",
     "flask-migrate>=4.0.0",
