--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,3 +1,5 @@
+limit_req_zone $binary_remote_addr zone=api_per_ip:10m rate=50r/s;
+
 server {
     listen 80;
     server_name localhost;
@@ -5,7 +7,7 @@ server {
     index index.html;
 
     # 允许上传大文件（解决413错误）
-    client_max_body_size 50M;
+    client_max_body_size 200M;
 
     # Gzip 压缩
     gzip on;
@@ -20,6 +22,7 @@ server {
 
     # API 代理到后端 - 使用 ^~ 确保优先匹配
     location ^~ /api {
+        limit_req zone=api_per_ip burst=200 nodelay;
         proxy_pass http://backend:5000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -29,7 +32,10 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
-        proxy_read_timeout 300s;
+        # SSE / long tasks
+        proxy_buffering off;
+        proxy_read_timeout 3600s;
+        proxy_send_timeout 3600s;
         proxy_connect_timeout 300s;
     }
 
@@ -60,4 +66,3 @@ server {
         add_header Cache-Control "public, immutable";
     }
 }
-
