--- a/.env.example
+++ b/.env.example
@@ -100,8 +100,12 @@ RQ_QUEUES_HEAVY=heavy
 # 任务内部并发（每个任务内部的线程数）
 # =====================
 
-MAX_DESCRIPTION_WORKERS=15
-MAX_IMAGE_WORKERS=15
+# 说明：
+# - 这个并发是“单个任务内部”的线程数（例如一次批量生图任务会并发多少张）
+# - 数值过大容易触发上游模型限流/重试，反而变慢（你日志里出现大量 Retrying request 就是典型信号）
+# - 单机 6c/32G 的推荐起步值：图片 4、描述 5；再根据模型限流和机器负载微调
+MAX_DESCRIPTION_WORKERS=5
+MAX_IMAGE_WORKERS=4
 
 # =====================
 # Web 服务器（gunicorn）
