--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -23,6 +23,9 @@ server {
     # API 代理到后端 - 使用 ^~ 确保优先匹配
     location ^~ /api {
         limit_req zone=api_per_ip burst=200 nodelay;
+        # limit_req 默认返回 503，容易被前端误判为“服务不可用”；改为 429 更符合语义
+        limit_req_status 429;
+        limit_req_log_level warn;
         proxy_pass http://backend:5000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
