--- a/.env.example
+++ b/.env.example
@@ -134,11 +134,14 @@ BAIDU_OCR_API_KEY=you-baidu-api-key
 OUTPUT_LANGUAGE=zh
 
 # =====================
-# 镜像源（国内用户可按需开启）
+# 镜像源（国内用户推荐开启以加速构建）
 # =====================
 
-# DOCKER_REGISTRY=docker.1ms.run/
-# GHCR_REGISTRY=ghcr.nju.edu.cn/
-# APT_MIRROR=mirrors.aliyun.com
-# PYPI_INDEX_URL=https://mirrors.cloud.tencent.com/pypi/simple
-# NPM_REGISTRY=https://registry.npmmirror.com/
+# 国内用户推荐使用以下镜像源，可将构建速度提升10倍以上
+# 如在海外服务器部署，可注释掉这些配置使用官方源
+
+DOCKER_REGISTRY=docker.1ms.run/
+GHCR_REGISTRY=ghcr.nju.edu.cn/
+APT_MIRROR=mirrors.aliyun.com
+PYPI_INDEX_URL=https://mirrors.cloud.tencent.com/pypi/simple
+NPM_REGISTRY=https://registry.npmmirror.com/
